--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_auto_deleted"
+        android:id="@+id/icAutoDeleted"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_marginTop="-4dp"
@@ -40,7 +40,7 @@
         tools:visibility="visible" />
 
     <com.sceyt.chatuikit.presentation.custom_views.PresenceStateIndicatorView
-        android:id="@+id/onlineStatus"
+        android:id="@+id/onlineState"
         android:layout_width="14dp"
         android:layout_height="14dp"
         android:layout_margin="1dp"
@@ -74,7 +74,7 @@
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="Title" />
 
-    <com.sceyt.chatuikit.presentation.custom_views.ColorSpannableTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/lastMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -130,19 +130,21 @@
         app:srcCompat="@drawable/sceyt_ic_pin_filled"
         tools:visibility="visible" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/icMention"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/sceyt_bg_circle"
-        android:gravity="center"
-        android:padding="2dp"
+        android:gravity="center_horizontal"
+        android:includeFontPadding="false"
+        android:text="\@"
+        android:textColor="@color/sceyt_color_on_primary"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/unreadMessagesCount"
         app:layout_constraintTop_toBottomOf="@+id/dateStatus"
-        app:srcCompat="@drawable/sceyt_ic_mention"
+        tools:ignore="HardcodedText"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
