--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_input_video_attachment.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_input_video_attachment.xml
@@ -45,12 +45,9 @@
             android:id="@+id/btnRemove"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/sceyt_bg_circle"
-            android:backgroundTint="@color/sceyt_color_surface_3"
-            android:tint="@color/sceyt_color_on_primary"
             app:layout_constraintBottom_toBottomOf="@id/imageCont"
             app:layout_constraintStart_toStartOf="@id/imageCont"
-            app:srcCompat="@drawable/sceyt_ic_cancel" />
+            app:srcCompat="@drawable/sceyt_ic_close" />
 
     </FrameLayout>
 
