--- a/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
@@ -40,6 +40,7 @@
         tools:text="@tools:sample/lorem/random" />
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
