--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
@@ -7,10 +7,10 @@
     android:paddingStart="0dp"
     android:paddingEnd="12dp">
 
-    <com.sceyt.chatuikit.presentation.custom_views.CircleCheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/selectView"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:clickable="false"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,13 +120,13 @@
             android:layout_height="0dp"
             android:padding="1dp"
             android:visibility="gone"
-            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="@+id/icFile"
             app:layout_constraintEnd_toEndOf="@id/icFile"
             app:layout_constraintStart_toStartOf="@+id/icFile"
             app:layout_constraintTop_toTopOf="@+id/icFile"
-            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressIconSizeInPercent="65"
+            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressTrackColor="@android:color/transparent" />
 
         <androidx.appcompat.widget.AppCompatTextView
