--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.sceyt.chatuikit.presentation.custom_views.CircleCheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/selectView"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,8 +166,8 @@
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/fileImage"
             app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
-            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextHighlighted="true"
+            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
             tools:sceytUiDecoratedTextTitle="00:37" />
 
